fix versus image overflow status and add versus empty image.

--- a/sass/pages/_news.scss
+++ b/sass/pages/_news.scss
@@ -74,6 +74,7 @@
 	    width: columns(5);
 	  }
 		.character-image {
+			overflow: hidden;
 			position: relative;
 			z-index: 1;
 			display: inline-block;
