--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -668,7 +668,7 @@ body.open-menu { height: 100%; }
 .versus .character-right { float: right; width: 100%; text-align: center; }
 @media (min-width: 500px) { .versus .character-right { width: 47.05882%; } }
 @media (min-width: 650px) { .versus .character-right { width: 40%; } }
-.versus .character-right .character-image { position: relative; z-index: 1; display: inline-block; width: 100%; height: 0; padding-bottom: 37.5%; }
+.versus .character-right .character-image { overflow: hidden; position: relative; z-index: 1; display: inline-block; width: 100%; height: 0; padding-bottom: 37.5%; }
 .versus .character-right .character-image:after { content: ""; position: absolute; top: 20px; left: 0px; bottom: 0px; right: 20px; z-index: 0; background: transparent; -webkit-box-shadow: -7px 7px 10px rgba(0, 0, 0, 0.5); -moz-box-shadow: -7px 7px 10px rgba(0, 0, 0, 0.5); box-shadow: -7px 7px 10px rgba(0, 0, 0, 0.5); }
 .versus .character-right .character-image img { position: absolute; top: 0; left: 0; width: 100%; -webkit-clip-path: polygon(0% 0%, 5% 0%, 100% 0%, 100% 86.6%, 95% 100%, 0% 100%, 0% 13.3%); clip-path: polygon(0% 0%, 5% 0%, 100% 0%, 100% 86.6%, 95% 100%, 0% 100%, 0% 13.3%); }
 @media (min-width: 500px) { .versus .character-right .character-image img { -webkit-clip-path: polygon(0% 13.3%, 5% 0%, 100% 0%, 100% 86.6%, 95% 100%, 0% 100%, 0% 13.3%); clip-path: polygon(0% 13.3%, 5% 0%, 100% 0%, 100% 86.6%, 95% 100%, 0% 100%, 0% 13.3%); } }
@@ -709,12 +709,12 @@ body.open-menu { height: 100%; }
 .topic-content:after, .topic-content-wrap:after { content: ""; display: table; clear: both; }
 
 .topic-title { position: relative; margin-top: 12px; margin-bottom: 24px; padding-left: 48px; }
-.topic-title:before { content: ""; position: absolute; top: 0; left: 0; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/icon_topic.png?1392266209'); background-repeat: no-repeat; background-position: 50% 50%; width: 48px; height: 48px; background-image: none, url('/images/icon_topic.svg?1392266195'); }
+.topic-title:before { content: ""; position: absolute; top: 0; left: 0; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/icon_topic.png?1392276903'); background-repeat: no-repeat; background-position: 50% 50%; width: 48px; height: 48px; background-image: none, url('/images/icon_topic.svg?1392266195'); }
 
 .topic-title-collapse { position: relative; margin-bottom: 24px; font-size: 18px; line-height: 48px; padding-left: 48px; padding-right: 24px; }
 @media (min-width: 650px) { .topic-title-collapse { font-size: 22px; line-height: 48px; }
   .topic-title-collapse:after { content: ""; position: absolute; top: 45%; right: 5px; border: 8px solid transparent; border-top: 8px solid #b7b5b0; } }
-.topic-title-collapse:before { content: ""; position: absolute; top: 0; left: 0; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/icon_topic.png?1392266209'); background-repeat: no-repeat; background-position: 50% 50%; width: 48px; height: 48px; background-image: none, url('/images/icon_topic.svg?1392266195'); }
+.topic-title-collapse:before { content: ""; position: absolute; top: 0; left: 0; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/icon_topic.png?1392276903'); background-repeat: no-repeat; background-position: 50% 50%; width: 48px; height: 48px; background-image: none, url('/images/icon_topic.svg?1392266195'); }
 .topic-title-collapse .title-extra { display: block; color: #92928a; }
 
 .post-timeline { position: relative; }
